--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="bg-background">
+<html lang="pr-br" class="bg-background dark">
 
 <head>
   <meta charset="UTF-8" />
